Lazily allocate slots